# Fmusic_player

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  PRIVACY.md  README.md  README_zh_CN.md  conanfile.txt  readme.md  vcpkg.json  vcpkg.json.bak
.cmake/: InstallerScript.iss.in
.github/workflows/: build_msix.yml  sync_to_gitee.yml  ubuntu.yml  windows.yml
FluentUI/: CMakeLists.txt
FluentUI/Qt6/imports/FluentUI/Controls/: FluComboBox.qml  FluExpander.qml  FluNavigationView.qml
FluentUI/Qt6/imports/FluentUI/JS/: Chart.js
FluentUI/i18n/: fluentui_zh_CN.ts
FluentUI/include/: Def.h  FluAccentColor.h  FluApp.h  FluCaptcha.h  FluColors.h  FluCountTimer.h  FluFrameless.h  FluHotkey.h  FluQrCodeItem.h  FluRectangle.h  FluTableModel.h  FluTableSortProxyModel.h  FluTextStyle.h  FluTheme.h  FluTools.h  FluTreeModel.h  FluWatermark.h  FluentIconDef.h  FluentUI.h  singleton.h  stdafx.h
FluentUI/qml/Controls/: FluAcrylic.qml  FluIcon.qml
FluentUI/qmlcustomplot/: baseplot.cpp  qcustomplot.cpp
FluentUI/src/: FluApp.cpp  FluRectangle.cpp
src/: App.qml  CMakeLists.txt  Version.h  main.cpp  nice_en_US.ts  nice_zh_CN.ts  qml.qrc  resource.rc
src/Navigation/: ItemsOriginal.qml
src/Page/: BottomBar.qml  Main.qml  NavigationItemsFooter.qml  NavigationItemsOriginal.qml
src/Page/Components/: DemoData.qml  MusicInfo.qml  QCScrollBar.qml  RandomSelector.qml  RoundImage.qml  SrollText.qml
src/Page/Components/DrawerMusic/: FluidBackground.qml  LeftPanel.qml  MusicPlayerPage.qml  RightPanel.qml
src/Page/MusicPage/: FluidBackground.qml  MusicAlbum.qml  MusicDetail.qml
src/Page/NavigationPage/: Favorite.qml  Recommendation.qml  Settings.qml  UserLogin.qml  local.qml  settings.qml
src/Page/SettingsPage/: AboutPage.qml  DisplayPage.qml
src/components/: MusicInfo.qml  MyComponent.qml  RcCnd.qml  RoundImage.qml  SrollText.qml
src/components/DrawerMusic/: LeftPanel.qml  MusicPlayerPage.qml  RightPanel.qml
src/cpp/: ApiClient.cpp  AudioProcessor.cpp  BluetoothAudioMonitor.cpp  DatabaseManager.cpp  FAlbumArtManager.cpp  Http.cpp  LocalTrackTable.cpp  Lyrics.cpp  MusicPlayer.cpp  QJson.cpp  WinRTUtils.cpp  WinSMTCController.cpp  main.cpp  main.cpp.bak  mysql.cpp  touser.cpp
src/i18n/: en_US.ts  zh_CN.ts
src/include/: Iconvert.h
src/include/Decryptor/: Cde.h  Common.h  KLyricsParser.h  KRCDecryptor.h
src/include/Sql/: mysql.h  touser.h
src/include/control/: ApiClient.h  AudioProcessor.h  BluetoothAudioMonitor.h  FAlbumArtManager.h  FileManager.h  Http.h  KLyricsParser.h  Lyrics.h  MusicPlayer.h  MyController.h  QFiledownload.h  QJson.h  WinRTUtils.h  WinSMTCController.h  interface.h
src/include/db/: DatabaseManager.h  LocalTrackTable.h
src/include/decrypt/: Common.h  DecryptFactory.h  KGMADecryptor.h  KRCDecryptor.h  NCMDecryptor.h
src/js/: Api.js  Request.js  myjs.js
src/main/: BottomBar.qml  bottomBar.qml  main.qml
src/navigation/: ItemsFooter.qml  ItemsOriginal.qml
src/navigationPage/: DemoData.qml  home.qml  local.qml  settings.qml  userLogin.qml
src/page/: About.qml  F_FindMusicPlayList.qml  F_FindNewMusic.qml  F_PlayList_detail.qml  F_ai_recommend.qml  F_collect.qml  F_day_recommend.qml  F_findmusic.qml  F_localmusic.qml  F_play_queue.qml  F_search_detail.qml  Music_detail_krc.qml  Music_detail_lrc.qml  TitleBar.qml
src/qml/: layout.qml  main.qml  test.qml
src/res/: PlayllisstType.sql  create.sql
src/settingsPage/: AboutPage.qml  DisplayPage.qml
